--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,23 @@
 name: flutter_facebook_login
 description: A Flutter plugin for allowing users to authenticate with native Android &amp; iOS Facebook login SDKs.
-version: 3.0.0
-author: Iiro Krankka <iiro.krankka@gmail.com>
+version: 4.0.0
 homepage: https://github.com/roughike/flutter_facebook_login
+
+environment:
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.0.0
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.0
 
 flutter:
   plugin:
     androidPackage: com.roughike.facebooklogin.facebooklogin
     pluginClass: FacebookLoginPlugin
-
-environment:
-  sdk: ">=2.0.0-dev.28.0 <3.0.0"
